--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="data:image/x-icon;,">
 </head>
 <body>
+  <pre id="debug" style="color:yellow;background:black;z-index:99999;position:fixed;top:0;left:0;max-width:100vw;max-height:30vh;overflow:auto;"></pre>
   <!-- Conteneur principal pour le mode plein écran -->
   <div id="fullscreen-container">
     <!-- Sons divers -->
@@ -158,3 +159,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
